tests/fixtures/invalid/token_inesperado.c
// Generado por Synapse (auto-hospedado)
#include <stdio.h>
#include <stdlib.h>
int main(void) {
    printf("OK: compilado");
    return 0;
}
